// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements added to cart onClick add to cart 1`] = `
<div
  class="App"
>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="itemList"
        >
          <div
            class="card"
            style="width: 175px; margin: 10px;"
          >
            <div
              class="card-body"
            >
              <div
                class="card-title h5"
              >
                Face Mask
              </div>
              <p
                class="card-text"
              >
                2.5
              </p>
              <button
                class="btn btn-primary"
                type="button"
              >
                Add to cart
              </button>
            </div>
          </div>
          <div
            class="card"
            style="width: 175px; margin: 10px;"
          >
            <div
              class="card-body"
            >
              <div
                class="card-title h5"
              >
                Toilet Paper
              </div>
              <p
                class="card-text"
              >
                0.65
              </p>
              <button
                class="btn btn-primary"
                type="button"
              >
                Add to cart
              </button>
            </div>
          </div>
          <div
            class="card"
            style="width: 175px; margin: 10px;"
          >
            <div
              class="card-body"
            >
              <div
                class="card-title h5"
              >
                Hand Sanitizer
              </div>
              <p
                class="card-text"
              >
                19.99
              </p>
              <button
                class="btn btn-primary"
                type="button"
              >
                Add to cart
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-lg-3 col"
      >
        <div>
          <div>
            Your cart is empty
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`elements added to cart onClick add to cart 2`] = `
<div
  class="App"
>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="itemList"
        >
          <div
            class="card"
            style="width: 175px; margin: 10px;"
          >
            <div
              class="card-body"
            >
              <div
                class="card-title h5"
              >
                Face Mask
              </div>
              <p
                class="card-text"
              >
                2.5
              </p>
              <button
                class="btn btn-primary"
                type="button"
              >
                Add to cart
              </button>
            </div>
          </div>
          <div
            class="card"
            style="width: 175px; margin: 10px;"
          >
            <div
              class="card-body"
            >
              <div
                class="card-title h5"
              >
                Toilet Paper
              </div>
              <p
                class="card-text"
              >
                0.65
              </p>
              <button
                class="btn btn-primary"
                type="button"
              >
                Add to cart
              </button>
            </div>
          </div>
          <div
            class="card"
            style="width: 175px; margin: 10px;"
          >
            <div
              class="card-body"
            >
              <div
                class="card-title h5"
              >
                Hand Sanitizer
              </div>
              <p
                class="card-text"
              >
                19.99
              </p>
              <button
                class="btn btn-primary"
                type="button"
              >
                Add to cart
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-lg-3 col"
      >
        <div>
          <div
            class="cartItem my-2"
          >
            <span>
              Face Mask
            </span>
            <span>
              x 
              1
            </span>
            <span>
              £
              2.5
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders App component 1`] = `
<div
  class="App"
>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="itemList"
        >
          <div
            class="card"
            style="width: 175px; margin: 10px;"
          >
            <div
              class="card-body"
            >
              <div
                class="card-title h5"
              >
                Face Mask
              </div>
              <p
                class="card-text"
              >
                2.5
              </p>
              <button
                class="btn btn-primary"
                type="button"
              >
                Add to cart
              </button>
            </div>
          </div>
          <div
            class="card"
            style="width: 175px; margin: 10px;"
          >
            <div
              class="card-body"
            >
              <div
                class="card-title h5"
              >
                Toilet Paper
              </div>
              <p
                class="card-text"
              >
                0.65
              </p>
              <button
                class="btn btn-primary"
                type="button"
              >
                Add to cart
              </button>
            </div>
          </div>
          <div
            class="card"
            style="width: 175px; margin: 10px;"
          >
            <div
              class="card-body"
            >
              <div
                class="card-title h5"
              >
                Hand Sanitizer
              </div>
              <p
                class="card-text"
              >
                19.99
              </p>
              <button
                class="btn btn-primary"
                type="button"
              >
                Add to cart
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-lg-3 col"
      >
        <div>
          <div>
            Your cart is empty
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
